--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
 
     <!-- Bootstrap CSS -->
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
+    <link href="css\custom.min.css" rel="stylesheet" />
     <link href="css\style.css" rel="stylesheet" />
     <title>Michael Gombos | Houston Web Designer</title>
   </head>
