Added custom display classes to custom.scss

--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@
           <div class="container row mx-auto">
             <img class="col-5" src="assets\images\white-line-art-large.png" />
             <div class="my-auto col-7">
-              <h1>
+              <h1 class="display-1"><strong>
                 Hi,<br />
                 I build websites.
               </h1>
-              <p>Michael Gombos,</p>
-              <h2 class="text-primary">Houston Web Designer</h2>
+              </strong>
+              <p class="lead">Michael Gombos,</p>
+              <h2 class="text-primary display-5">Houston Web Designer</h2>
             </div>
           </div>
         </div>
