Home and Works images added to assets folder

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Michael Gombos | Houston Web Designer</title>
   </head>
   <body class="bg-dark text-light">
+    <!-- Hero -->
     <div class="mb-5 py-5 bg-secondary rounded-hero">
       <header class="container-fluid my-5">
         <nav class="container d-flex justify-content-between">
@@ -29,14 +30,23 @@
                 I build websites.
               </h1>
               </strong>
-              <p class="lead">Michael Gombos,</p>
-              <h2 class="text-primary display-5">Houston Web Designer</h2>
+              <p class="display-7 mb-0 mt-5">Michael Gombos,</p>
+              <h2 class="text-altprimary display-5 mt-0">Houston Web Designer</h2>
             </div>
           </div>
         </div>
       </main>
     </div>
-
+    <!-- About-->
+    <section class="container">
+    </section>
+    <!-- Works-->
+    <section class="container">
+    </section>
+    <!-- Contact-->
+    <section class="container">
+    </section>
+    <!-- Footer-->
     <footer></footer>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script
