Navigation Linked and Styled for home page.

--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
   </head>
   <body class="bg-dark text-light">
     <!-- Hero -->
-    <div class="mb-5 py-5 bg-secondary rounded-hero">
+    <div id="_hero" class="mb-5 py-5 bg-secondary rounded-hero">
       <header class="container-fluid my-5">
         <nav class="container d-flex justify-content-between display-8">
-          <a>Gombos</a>
-          <a>Works</a>
+          <a href="index.html" class="text-decoration-none link-altprimary"
+            >Gombos</i>
+          </a>
+          <a href="#" class="text-decoration-none link-altprimary">Works</a>
         </nav>
       </header>
       <main>
@@ -137,8 +139,10 @@
     <!-- Footer-->
     <footer class="container-fluid p-4 bg-secondary rounded-footer">
       <nav class="container d-flex justify-content-between display-8">
-        <a>Top <i class="fas fa-arrow-circle-up"></i></a>
-        <a>Works</a>
+        <a href="#_hero" class="text-decoration-none link-altprimary"
+          >Top <i class="fas fa-arrow-circle-up"></i>
+        </a>
+        <a href="#" class="text-decoration-none link-altprimary">Works</a>
       </nav>
     </footer>
     <!-- Option 1: Bootstrap Bundle with Popper -->
