Added breakpoints for lg and smaller screens in hero section

--- a/index.html
+++ b/index.html
@@ -17,27 +17,21 @@
     <title>Michael Gombos | Houston Web Designer</title>
   </head>
   <body class="bg-dark text-light">
-    <!-- Hero -->
+    <!-- Main Nav-->
     <div id="_hero" class="mb-5 py-5 bg-secondary rounded-hero">
       <header class="container-fluid my-5">
         <nav class="container d-flex justify-content-between display-8">
           <a href="index.html" class="text-decoration-none link-altprimary"
-            >Gombos</i>
+            >Gombos
           </a>
           <a href="#" class="text-decoration-none link-altprimary">Works</a>
         </nav>
       </header>
+      <!-- Hero-->
       <main>
         <div class="container-fluid mt-lg-5 pt-lg-5">
-          <div class="container row mx-auto">
-            <figure class="col-5">
-              <img
-                class="img-fluid"
-                src="assets\images\white-line-art-large.png"
-              />
-            </figure>
-
-            <div class="my-auto col-7">
+          <div class="container row flex-lg-row flex-column mx-auto">
+            <div class="my-auto col-lg-7 col-12 text-center text-lg-start">
               <h1 class="display-1">
                 <strong>
                   Hi,<br />
@@ -50,6 +44,13 @@
                 Houston Web Designer
               </h2>
             </div>
+
+            <figure class="col-lg-5 mx-auto col-10">
+              <img
+                class="img-fluid"
+                src="assets\images\white-line-art-large.png"
+              />
+            </figure>
           </div>
         </div>
       </main>
