--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
     </div>
     <!-- About-->
     <section class="container my-5">
-      <div class="row">
-        <figure class="col-4 offset-2">
+      <div class="row flex-column flex-lg-row">
+        <figure class="col-lg-4 offset-1 col-10">
           <img
             src="assets\images\michael-border-stand-far.png"
             alt="Michael Gombos Standing"
