--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
           <img
             src="assets\images\michael-border-stand-far.png"
             alt="Michael Gombos Standing"
-            class="img-fluid"
+            class="img-fluid border border-3"
           />
         </figure>
 
-        <div class="col-4 my-auto">
+        <div class="col-lg-4 col-10 offset-1 offset-lg-0 my-auto">
           <h2 class="display-3">About Me</h2>
           <p class="lead">
             I am a Computer Science major at HCC, I work from home as a Web
@@ -78,8 +78,8 @@
     <!-- Works-->
     <h2 class="display-3 text-center">My Most Recent Client</h2>
     <section class="container bg-primary py-4 mt-3">
-      <div class="row">
-        <div class="col-4 offset-1">
+      <div class="row flex-column flex-lg-row">
+        <div class="col-10 offset-1 offset-lg-0 col-lg-4 offset-1">
           <h3 class="display-5">Kbkaty.com</h3>
           <p class="text-altgray display-7"><em>Bootstrap</em></p>
           <p class="lead">
@@ -96,7 +96,9 @@
             ><i class="fas fa-arrow-circle-right fa-2x"></i>
           </button>
         </div>
-        <figure class="col-5 offset-1 my-auto">
+        <figure
+          class="col-10 col-lg-5 offset-1 my-auto order-first order-lg-last"
+        >
           <img
             src="assets\mockups\kbkaty-mockup-device-array.png"
             alt=""
@@ -107,8 +109,8 @@
     </section>
     <!-- Contact-->
     <section class="container my-5">
-      <div class="row">
-        <div class="col-4 offset-2 my-auto">
+      <div class="row flex-column flex-lg-row">
+        <div class="col-lg-4 col-10 offset-1 offset-lg-0 my-auto">
           <h2 class="display-3">Contact Me</h2>
           <p class="lead mb-0 mt-4">
             Email:
@@ -128,11 +130,11 @@
           </p>
         </div>
 
-        <figure class="col-4">
+        <figure class="col-lg-4 offset-1 col-10 order-first order-lg-lst">
           <img
             src="assets\images\michael-border-sit-far.png"
             alt="Michael Gombos Standing"
-            class="img-fluid"
+            class="img-fluid border border-3"
           />
         </figure>
       </div>
