Added content + mobile queries for works page

--- a/works.html
+++ b/works.html
@@ -33,10 +33,7 @@
           <div class="container row flex-lg-row flex-column mx-auto">
             <div class="my-auto col-lg-7 col-12 text-center text-lg-start">
               <h1 class="display-1">
-                <strong>
-                  Hi,<br />
-                  I build websites.
-                </strong>
+                <strong> Works </strong>
               </h1>
 
               <p class="display-7 mb-0 mt-5">Michael Gombos,</p>
@@ -55,29 +52,50 @@
         </div>
       </main>
     </div>
-    <!-- About-->
-    <section class="container my-5">
-      <div class="row flex-column flex-lg-row">
-        <figure class="col-lg-4 offset-1 col-10">
-          <img
-            src="assets\images\michael-border-stand-far.png"
-            alt="Michael Gombos Standing"
-            class="img-fluid border border-3"
-          />
-        </figure>
+    <!-- Works-->
+    <h2 class="display-3 text-center">Over The Years</h2>
+    <section class="container">
+      <div class="row">
+        <div
+          class="
+            col-lg-10
+            d-flex
+            flex-lg-row flex-column
+            offset-lg-1
+            bg-secondary
+            p-5
+          "
+        >
+          <div class="my-auto col-lg-4 offset-lg-1">
+            <h3 class="display-5 mb-0 text-altprimary mt-lg-0 mt-3">
+              MyWallet.com
+            </h3>
+            <p class="text-altgray display-7 my-0"><em>Personal Design</em></p>
 
-        <div class="col-lg-4 col-10 offset-1 offset-lg-0 my-auto">
-          <h2 class="display-3">About Me</h2>
-          <p class="lead">
-            I am a Computer Science major at HCC, I work from home as a Web
-            Designer by day, and freelancer by night.
-          </p>
+            <button class="btn btn-primary text-light mt-5">
+              <span class="display-8">Visit </span
+              ><i class="fas fa-arrow-circle-right fa-2x"></i>
+            </button>
+          </div>
+          <figure
+            class="
+              order-lg-last order-first
+              ml-lg-2
+              my-auto
+              offset-lg-1
+              col-lg-4
+            "
+          >
+            <img
+              src="assets\mockups\Mywallet-Mockup-phone-array.png"
+              alt=""
+              class="img-fluid"
+            />
+          </figure>
         </div>
       </div>
     </section>
-    <!-- Works-->
-    <h2 class="display-3 text-center">My Most Recent Client</h2>
-    <section class="container bg-primary py-4 mt-3">
+    <section class="container bg-primary py-5 my-5">
       <div class="row flex-column flex-lg-row">
         <div class="col-10 offset-1 col-lg-4">
           <h3 class="display-5">Kbkaty.com</h3>
@@ -90,7 +108,6 @@
             The design and layout were already decided, with my part being the
             development.
           </p>
-          <i class="bi bi-arrow-right-circle-fill"></i>
           <button class="btn btn-light text-primary">
             <span class="display-8">Visit </span
             ><i class="fas fa-arrow-circle-right fa-2x"></i>
@@ -107,7 +124,78 @@
         </figure>
       </div>
     </section>
+    <section class="container">
+      <div class="row">
+        <div
+          class="
+            col-lg-10
+            d-flex
+            flex-lg-row flex-column
+            offset-lg-1
+            bg-secondary
+            p-5
+          "
+        >
+          <div class="my-auto col-lg-4 offset-lg-1">
+            <h3 class="display-5 mb-0 text-altprimary mt-lg-0 mt-3">
+              RandomChat.net
+            </h3>
+            <p class="text-altgray display-7 my-0"><em>Personal Design</em></p>
+
+            <button class="btn btn-primary text-light mt-5">
+              <span class="display-8">Visit </span
+              ><i class="fas fa-arrow-circle-right fa-2x"></i>
+            </button>
+          </div>
+          <figure
+            class="
+              order-lg-last order-first
+              ml-lg-2
+              my-auto
+              offset-lg-1
+              col-lg-4
+            "
+          >
+            <img
+              src="assets\mockups\RandomChat-Mockup-Monitor_array.png"
+              alt=""
+              class="img-fluid"
+            />
+          </figure>
+        </div>
+      </div>
+    </section>
+    <!-- Non-Design Projects-->
+    <h2 class="display-3 text-center mt-5">Non Design Projects</h2>
+    <section class="container bg-secondary py-5 my-5 mt-3">
+      <div class="row flex-column flex-lg-row">
+        <div class="col-10 offset-1 col-lg-4">
+          <h3 class="display-5 text-altprimary">Email Scraper</h3>
+          <p class="text-altgray display-7"><em>Python</em></p>
+          <p class="lead">
+            This is a tool I built to assist me in my freshman year internship
+            search. Lets say for example you wanted to contact the owner of
+            jogger.com via email. This tool would allow you to Query all emails
+            found for the site in the snov.io database and it will return all
+            data as JSON objects. Learn more on my GitHub.
+          </p>
+          <button class="btn btn-light text-primary">
+            <span class="display-8">Source </span><i class="fab fa-github"></i>
+          </button>
+        </div>
+        <figure
+          class="col-10 col-lg-5 offset-1 my-auto order-first order-lg-last"
+        >
+          <img
+            src="assets\mockups\kbkaty-mockup-device-array.png"
+            alt=""
+            class="img-fluid"
+          />
+        </figure>
+      </div>
+    </section>
     <!-- Contact-->
+
     <section class="container my-5">
       <div class="row flex-column flex-lg-row">
         <div class="col-lg-4 col-10 offset-1 offset-lg-0 my-auto">
@@ -139,6 +227,7 @@
         </figure>
       </div>
     </section>
+
     <!-- Footer-->
     <footer class="container-fluid p-4 bg-secondary rounded-footer">
       <nav class="container d-flex justify-content-between display-8">
