Corrected Nav Links

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
           <a href="index.html" class="text-decoration-none link-altprimary"
             >Gombos
           </a>
-          <a href="#" class="text-decoration-none link-altprimary">Works</a>
+          <a href="works.html" class="text-decoration-none link-altprimary"
+            >Works <i class="fas fa-arrow-circle-right"></i
+          ></a>
         </nav>
       </header>
       <!-- Hero-->
@@ -145,7 +147,9 @@
         <a href="#_hero" class="text-decoration-none link-altprimary"
           >Top <i class="fas fa-arrow-circle-up"></i>
         </a>
-        <a href="#" class="text-decoration-none link-altprimary">Works</a>
+        <a href="wokrs.html" class="text-decoration-none link-altprimary"
+          >See more Works<i class="fas fa-arrow-circle-right"></i
+        ></a>
       </nav>
     </footer>
     <!-- Option 1: Bootstrap Bundle with Popper -->
