--- a/works.html
+++ b/works.html
@@ -24,7 +24,9 @@
           <a href="index.html" class="text-decoration-none link-altprimary"
             >Gombos
           </a>
-          <a href="#" class="text-decoration-none link-altprimary">Works</a>
+          <a href="works.html" class="text-decoration-none link-altprimary"
+            >Works</a
+          >
         </nav>
       </header>
       <!-- Hero-->
@@ -234,7 +236,9 @@
         <a href="#_hero" class="text-decoration-none link-altprimary"
           >Top <i class="fas fa-arrow-circle-up"></i>
         </a>
-        <a href="#" class="text-decoration-none link-altprimary">Works</a>
+        <a href="index.html" class="text-decoration-none link-altprimary"
+          >Back Home <i class="fas fa-arrow-circle-right"></i><i></i
+        ></a>
       </nav>
     </footer>
     <!-- Option 1: Bootstrap Bundle with Popper -->
