Added experience section.
Added icons and and effect that I call the 'fishtail' witch is basically an inverted border radius effect achieved using SVG.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,22 @@
       <main>
         <div class="container-fluid mt-lg-5 pt-lg-5">
           <div class="container row flex-lg-row flex-column mx-auto">
-            <div class="my-auto col-lg-7 col-12 text-center text-lg-start">
+            <figure class="col-lg-4 mx-auto col-10">
+              <img
+                class="img-fluid"
+                src="assets\images\white-line-art-large.png"
+              />
+            </figure>
+
+            <div
+              class="
+                my-auto
+                offset-1
+                col-lg-6 col-12
+                text-center text-lg-start
+                order-lg-first
+              "
+            >
               <h1 class="display-1">
                 <strong>
                   Hi,<br />
@@ -46,13 +61,6 @@
                 Houston Web Designer
               </h2>
             </div>
-
-            <figure class="col-lg-5 mx-auto col-10 order-lg-first">
-              <img
-                class="img-fluid"
-                src="assets\images\white-line-art-large.png"
-              />
-            </figure>
           </div>
         </div>
       </main>
@@ -74,6 +82,134 @@
             I am a Computer Science major at HCC, I work from home as a Web
             Designer by day, and freelancer by night.
           </p>
+        </div>
+      </div>
+    </section>
+    <!-- Experience -->
+    <section class="container bg-secondary d-none">
+      <h2 class="display-3 text-center">Experience</h2>
+      <hr class="bg-primary w-25 mx-auto opacity-1" />
+      <div class="row flex-column flex-lg-row">
+        <div class="col-10 offset-1 col-lg-6">
+          <h3 class="display-5">Web Designer</h3>
+
+          <p class="text-altgray display-8 mb-0">
+            <em>99Cave Web Designs</em>
+          </p>
+          <p class="text-altgray mt-0 mb-3">
+            <em>Jun. 2020 - Dec. 2020</em>
+          </p>
+          <p class="lead">
+            Designed and developed websites for local businesses.<br />
+            Gathered client information such as business goals and target
+            customer.<br />
+            Designed wireframes and mockups using adobe XD.<br />
+            Constructed fast mobile responsive sites using bootstrap.<br />
+          </p>
+          <i class="bi bi-arrow-right-circle-fill"></i>
+          <button class="btn btn-light text-primary">
+            <span class="display-8">Visit </span
+            ><i class="fas fa-arrow-circle-right fa-2x"></i>
+          </button>
+        </div>
+        <figure
+          class="col-10 col-lg-2 offset-1 my-auto order-first order-lg-last"
+        >
+          <img
+            src="assets\mockups\kbkaty-mockup-device-array.png"
+            alt=""
+            class="img-fluid"
+          />
+        </figure>
+      </div>
+    </section>
+
+    <section class="container-fluid">
+      <div class="row">
+        <div class="bg-secondary col-10 offset-1 py-4 radius-50-l">
+          <!--content-->
+          <h2 class="display-3 text-center">Experience</h2>
+          <hr class="bg-primary w-25 mx-auto opacity-1" />
+          <div class="row">
+            <div class="col-10 offset-2 col-lg-6">
+              <h3 class="display-5">Web Designer</h3>
+
+              <p class="text-altgray display-8 mb-0">
+                <em>99Cave Web Designs</em>
+              </p>
+              <p class="text-altgray mt-0 mb-3">
+                <em>Jun. 2020 - Dec. 2020</em>
+              </p>
+              <p class="lead">
+                Designed and developed websites for local businesses.<br />
+                Gathered client information such as business goals and target
+                customer.<br />
+                Designed wireframes and mockups using adobe XD.<br />
+                Constructed fast mobile responsive sites using bootstrap.<br />
+              </p>
+              <i class="bi bi-arrow-right-circle-fill"></i>
+            </div>
+            <figure class="col-10 col-lg-2 my-auto order-first order-lg-last">
+              <img
+                src="assets\images\99cave-logo.png"
+                alt=""
+                class="img-fluid"
+              />
+            </figure>
+          </div>
+
+          <div class="row mt-5">
+            <div class="col-10 offset-2 col-lg-6">
+              <h3 class="display-5">Web Design Instructor</h3>
+
+              <p class="text-altgray display-8 mb-0">
+                <em>SEO for Real Estate Investors</em>
+              </p>
+              <p class="text-altgray mt-0 mb-3">
+                <em>Jan. 2021 - Present</em>
+              </p>
+              <p class="lead">
+                Guided business owners on proper content writing and design
+                methodology.
+                <br />
+                Explained web design concepts in a digestible and clear manner
+                for beginners.
+                <br />
+                Evaluated sites for design flaws and SEO errors.
+
+                <br />
+                Designed and launched websites using WYSIWYG editor.<br />
+              </p>
+              <i class="bi bi-arrow-right-circle-fill"></i>
+            </div>
+            <figure class="col-10 col-lg-2 my-auto order-first order-lg-last">
+              <img
+                src="assets\images\SEOforREI-logo.png"
+                alt=""
+                class="img-fluid"
+              />
+            </figure>
+          </div>
+        </div>
+        <div
+          class="
+            bg-secondary
+            col-1
+            fishtail-r
+            d-flex
+            flex-column
+            justify-content-between
+          "
+        >
+          <img
+            src="assets\svg\fishtails\fishtail-secondary-br.svg"
+            class="fishtail-br"
+          />
+
+          <img
+            src="assets\svg\fishtails\fishtail-secondary-tr.svg"
+            class="fishtail-tr"
+          />
         </div>
       </div>
     </section>
