--- a/index.html
+++ b/index.html
@@ -86,43 +86,6 @@
       </div>
     </section>
     <!-- Experience -->
-    <section class="container bg-secondary d-none">
-      <h2 class="display-3 text-center">Experience</h2>
-      <hr class="bg-primary w-25 mx-auto opacity-1" />
-      <div class="row flex-column flex-lg-row">
-        <div class="col-10 offset-1 col-lg-6">
-          <h3 class="display-5">Web Designer</h3>
-
-          <p class="text-altgray display-8 mb-0">
-            <em>99Cave Web Designs</em>
-          </p>
-          <p class="text-altgray mt-0 mb-3">
-            <em>Jun. 2020 - Dec. 2020</em>
-          </p>
-          <p class="lead">
-            Designed and developed websites for local businesses.<br />
-            Gathered client information such as business goals and target
-            customer.<br />
-            Designed wireframes and mockups using adobe XD.<br />
-            Constructed fast mobile responsive sites using bootstrap.<br />
-          </p>
-          <i class="bi bi-arrow-right-circle-fill"></i>
-          <button class="btn btn-light text-primary">
-            <span class="display-8">Visit </span
-            ><i class="fas fa-arrow-circle-right fa-2x"></i>
-          </button>
-        </div>
-        <figure
-          class="col-10 col-lg-2 offset-1 my-auto order-first order-lg-last"
-        >
-          <img
-            src="assets\mockups\kbkaty-mockup-device-array.png"
-            alt=""
-            class="img-fluid"
-          />
-        </figure>
-      </div>
-    </section>
 
     <section class="container-fluid">
       <div class="row">
@@ -195,7 +158,7 @@
           class="
             bg-secondary
             col-1
-            fishtail-r
+            fishtail
             d-flex
             flex-column
             justify-content-between
@@ -213,6 +176,75 @@
         </div>
       </div>
     </section>
+    <!-- Skills-->
+    <section class="container-fluid my-5">
+      <div class="row">
+        <div
+          class="
+            bg-secondary
+            col-1
+            fishtail
+            d-flex
+            flex-column
+            justify-content-between
+          "
+        >
+          <img
+            src="assets\svg\fishtails\fishtail-secondary-bl.svg"
+            class="fishtail-bl"
+          />
+
+          <img
+            src="assets\svg\fishtails\fishtail-secondary-tl.svg"
+            class="fishtail-tl"
+          />
+        </div>
+        <div class="bg-secondary col-10  py-4 radius-50-r">
+          <h2 class="display-3 text-center">Skills</h2>
+          <hr class="bg-primary w-25 mx-auto opacity-1" />
+          <div class="row justify-content-center">
+            <div class="col-4">
+              <h3 class="display-8 text-center">Tools</h3>
+              <!--Tool icons-->
+              <div class="row">
+                <div class="col-6 d-flex flex-column align-items-center">
+                  <img src="assets\svg\icons\Icon simple-adobeillustrator.svg">
+                  <p class="display-8 text-altgray">Illustrator</p>
+                  <img src="assets\svg\icons\Icon awesome-github.svg">
+                  <p class="display-8 text-altgray">Github</p>
+                </div>
+                <div class="col-6 d-flex flex-column align-items-center">
+                  <img src="assets\svg\icons\Icon simple-adobexd.svg">
+                  <p class="display-8 text-altgray">Adobe XD</p>
+                  <img src="assets\svg\icons\Icon simple-adobephotoshop.svg">
+                  <p class="display-8 text-altgray">Photoshop</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-1"></div>
+            <div class="col-4">
+              <h3 class="display-8 text-center">Front-End</h3>
+              <!--Front-end icons-->
+              <div class="row">
+                <div class="col-6 d-flex flex-column align-items-center">
+                  <img src="assets\svg\icons\Icon simple-adobeillustrator html_css.svg">
+                  <p class="display-8 text-altgray">HTML / CSS</p>
+                  <img src="assets\svg\icons\Icon awesome-bootstrap.svg">
+                  <p class="display-8 text-altgray">Bootstrap</p>
+                </div>
+                <div class="col-6 d-flex flex-column align-items-center">
+                  <img src="assets\svg\icons\Icon awesome-sass.svg">
+                  <p class="display-8 text-altgray">Sass</p>
+                  <img src="assets\svg\icons\Icon awesome-wordpress.svg">
+                  <p class="display-8 text-altgray">Wordpress</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          
+        </div>
+        
+      </div>
     <!-- Works-->
     <h2 class="display-3 text-center">My Most Recent Client</h2>
     <section class="container bg-primary py-4 mt-3">
