Fixed broken lower nav
Issue: missing closing tag for /section

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             class="fishtail-tl"
           />
         </div>
-        <div class="bg-secondary col-10  py-4 radius-50-r">
+        <div class="bg-secondary col-10 py-4 radius-50-r">
           <h2 class="display-3 text-center">Skills</h2>
           <hr class="bg-primary w-25 mx-auto opacity-1" />
           <div class="row justify-content-center">
@@ -208,15 +208,17 @@
               <!--Tool icons-->
               <div class="row">
                 <div class="col-6 d-flex flex-column align-items-center">
-                  <img src="assets\svg\icons\Icon simple-adobeillustrator.svg">
+                  <img
+                    src="assets\svg\icons\Icon simple-adobeillustrator.svg"
+                  />
                   <p class="display-8 text-altgray">Illustrator</p>
-                  <img src="assets\svg\icons\Icon awesome-github.svg">
+                  <img src="assets\svg\icons\Icon awesome-github.svg" />
                   <p class="display-8 text-altgray">Github</p>
                 </div>
                 <div class="col-6 d-flex flex-column align-items-center">
-                  <img src="assets\svg\icons\Icon simple-adobexd.svg">
+                  <img src="assets\svg\icons\Icon simple-adobexd.svg" />
                   <p class="display-8 text-altgray">Adobe XD</p>
-                  <img src="assets\svg\icons\Icon simple-adobephotoshop.svg">
+                  <img src="assets\svg\icons\Icon simple-adobephotoshop.svg" />
                   <p class="display-8 text-altgray">Photoshop</p>
                 </div>
               </div>
@@ -227,24 +229,25 @@
               <!--Front-end icons-->
               <div class="row">
                 <div class="col-6 d-flex flex-column align-items-center">
-                  <img src="assets\svg\icons\Icon simple-adobeillustrator html_css.svg">
+                  <img
+                    src="assets\svg\icons\Icon simple-adobeillustrator html_css.svg"
+                  />
                   <p class="display-8 text-altgray">HTML / CSS</p>
-                  <img src="assets\svg\icons\Icon awesome-bootstrap.svg">
+                  <img src="assets\svg\icons\Icon awesome-bootstrap.svg" />
                   <p class="display-8 text-altgray">Bootstrap</p>
                 </div>
                 <div class="col-6 d-flex flex-column align-items-center">
-                  <img src="assets\svg\icons\Icon awesome-sass.svg">
+                  <img src="assets\svg\icons\Icon awesome-sass.svg" />
                   <p class="display-8 text-altgray">Sass</p>
-                  <img src="assets\svg\icons\Icon awesome-wordpress.svg">
+                  <img src="assets\svg\icons\Icon awesome-wordpress.svg" />
                   <p class="display-8 text-altgray">Wordpress</p>
                 </div>
               </div>
             </div>
           </div>
-          
         </div>
-        
       </div>
+    </section>
     <!-- Works-->
     <h2 class="display-3 text-center">My Most Recent Client</h2>
     <section class="container bg-primary py-4 mt-3">
