Reformatted Recent client section of homepage

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body class="bg-dark text-light">
     <!-- Main Nav-->
-    <div id="_hero" class="mb-5 py-5 bg-secondary rounded-hero">
+    <div id="_hero" class="py-5 bg-secondary rounded-hero">
       <header class="container-fluid my-5">
         <nav class="container d-flex justify-content-between display-8">
           <a href="index.html" class="text-decoration-none link-altprimary"
@@ -65,8 +65,9 @@
         </div>
       </main>
     </div>
+    <img src="assets\svg\fishtails\fishtail-secondary-tl.svg" />
     <!-- About-->
-    <section class="container my-5">
+    <section class="container mb-5 mt-2">
       <div class="row flex-column flex-lg-row">
         <figure class="col-lg-4 offset-1 col-10">
           <img
@@ -249,39 +250,66 @@
       </div>
     </section>
     <!-- Works-->
-    <h2 class="display-3 text-center">My Most Recent Client</h2>
-    <section class="container bg-primary py-4 mt-3">
-      <div class="row flex-column flex-lg-row">
-        <div class="col-10 offset-1 col-lg-4">
-          <h3 class="display-5">Kbkaty.com</h3>
-          <p class="text-altgray display-7"><em>Bootstrap</em></p>
-          <p class="lead">
-            KBKaty is a Texas contracting company that opened in 2018. We were
-            able to produce a 20% increase in PPC conversions.
-          </p>
-          <p class="lead">
-            The design and layout were already decided, with my part being the
-            development.
-          </p>
-          <i class="bi bi-arrow-right-circle-fill"></i>
-          <button class="btn btn-light text-primary">
-            <span class="display-8">Visit </span
-            ><i class="fas fa-arrow-circle-right fa-2x"></i>
-          </button>
+    <section class="container-fluid">
+      <div class="row">
+        <div class="bg-secondary col-10 offset-1 py-4 radius-50-l">
+          <!--content-->
+          <h2 class="display-3 text-center">Most Recent Client</h2>
+          <hr class="bg-primary w-25 mx-auto opacity-1" />
+          <div class="row">
+            <div class="col-10 offset-2 col-lg-4">
+              <h3 class="display-5">KbKaty.com</h3>
+
+              <p class="text-altgray display-8 mb-0">
+                <em>Bootstrap</em>
+              </p>
+              <p class="lead">
+                KbKaty.com is a Texas contracting company that opened in 2018.
+                We were able to produce a 20% increase in PPC conversions.<br />
+                The design and layout were already decided, with my part being
+                the development.<br />
+              </p>
+              <button
+                class="btn btn-primary bg-transparent border-2 text-light"
+              >
+                <span class="display-8">Visit </span
+                ><i class="fas fa-arrow-circle-right fa-2x"></i>
+              </button>
+              <i class="bi bi-arrow-right-circle-fill"></i>
+            </div>
+            <figure class="col-10 col-lg-4 my-auto order-first order-lg-last">
+              <img
+                src="assets\mockups\kbkaty-mockup-device-array.png"
+                alt=""
+                class="img-fluid"
+              />
+            </figure>
+          </div>
         </div>
-        <figure
-          class="col-10 col-lg-5 offset-1 my-auto order-first order-lg-last"
+        <div
+          class="
+            bg-secondary
+            col-1
+            fishtail
+            d-flex
+            flex-column
+            justify-content-between
+          "
         >
           <img
-            src="assets\mockups\kbkaty-mockup-device-array.png"
-            alt=""
-            class="img-fluid"
+            src="assets\svg\fishtails\fishtail-secondary-br.svg"
+            class="fishtail-br"
           />
-        </figure>
+
+          <img
+            src="assets\svg\fishtails\fishtail-secondary-tr.svg"
+            class="fishtail-tr"
+          />
+        </div>
       </div>
     </section>
     <!-- Contact-->
-    <section class="container my-5">
+    <section class="container mt-5">
       <div class="row flex-column flex-lg-row">
         <div class="col-lg-4 col-10 offset-1 offset-lg-0 my-auto">
           <h2 class="display-3">Contact Me</h2>
@@ -313,12 +341,13 @@
       </div>
     </section>
     <!-- Footer-->
+    <img src="assets\svg\fishtails\fishtail-secondary-bl.svg" />
     <footer class="container-fluid p-4 bg-secondary rounded-footer">
       <nav class="container d-flex justify-content-between display-8">
         <a href="#_hero" class="text-decoration-none link-altprimary"
           >Top <i class="fas fa-arrow-circle-up"></i>
         </a>
-        <a href="wokrs.html" class="text-decoration-none link-altprimary"
+        <a href="works.html" class="text-decoration-none link-altprimary"
           >See more Works<i class="fas fa-arrow-circle-right"></i
         ></a>
       </nav>
