Added new portrait to home page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body class="bg-dark text-light">
     <!-- Main Nav-->
-    <div id="_hero" class="py-5 bg-secondary rounded-hero">
+    <div id="_hero" class="py-5 bg-secondary rounded-bottom-right">
       <header class="container-fluid my-5">
         <nav class="container d-flex justify-content-between display-8">
           <a href="index.html" class="text-decoration-none link-altprimary"
@@ -71,9 +71,13 @@
       <div class="row flex-column flex-lg-row">
         <figure class="col-lg-4 offset-1 col-10">
           <img
-            src="assets\images\michael-border-stand-far.png"
+            src="assets\images\michael-smile-vines.png"
             alt="Michael Gombos Standing"
-            class="img-fluid border border-3"
+            class="
+              img-fluid
+              border border-3
+              rounded-top-left rounded-bottom-right
+            "
           />
         </figure>
 
@@ -335,14 +339,18 @@
           <img
             src="assets\images\michael-border-sit-far.png"
             alt="Michael Gombos Standing"
-            class="img-fluid border border-3"
+            class="
+              img-fluid
+              border border-3
+              rounded-bottom-left rounded-top-right
+            "
           />
         </figure>
       </div>
     </section>
     <!-- Footer-->
     <img src="assets\svg\fishtails\fishtail-secondary-bl.svg" />
-    <footer class="container-fluid p-4 bg-secondary rounded-footer">
+    <footer class="container-fluid p-4 bg-secondary rounded-top-right">
       <nav class="container d-flex justify-content-between display-8">
         <a href="#_hero" class="text-decoration-none link-altprimary"
           >Top <i class="fas fa-arrow-circle-up"></i>
